# fmtcpp

./: CMakeLists.txt  README.md
include/: fmtcpp.h
test/: CMakeLists.txt  main.cpp
